--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
+    <!-- Google Icon -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -21,6 +27,281 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
+    <!-- Header Part HTML Start -->
+
+    <header>
+      <!-- Navigation Section HTML Start -->
+
+      <section id="Navigation">
+        <nav class="navbar d-none d-xl-block">
+          <div class="container">
+            <div
+              class="navbar-wrapper d-flex justify-content-between align-items-center w-100"
+            >
+              <div class="logo">
+                <a href="https://www.debtcollectionexperts.com.au"
+                  ><img src="assets/images/logo.svg" alt="logo"
+                /></a>
+              </div>
+              <div class="main-menu-wrapper d-flex justify-content-between">
+                <div class="main-menu">
+                  <ul class="d-flex align-items-center">
+                    <li>
+                      <a
+                        class="active"
+                        href="https://www.debtcollectionexperts.com.au"
+                        >Home</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/services"
+                      >
+                        Our Services +</a
+                      >
+                      <ul class="dropdown">
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                            >Commercial Debt Collection</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                            >Debt Collection</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/debt-collector.html"
+                            >Debt Collector</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                            >Debt Recovery</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                            >Personal Debt Collection</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                            >Small Busniess Debt Collection</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
+                            >Debt Collection Agency</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="#">Locations +</a>
+                      <ul class="dropdown">
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/hobart.html"
+                            >Hobart</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.debtcollectionexperts.com.au/launceston.html"
+                            >Launceston</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/about-us.html"
+                      >
+                        About Us</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/contact-us.html"
+                        >Contact us</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </section>
+
+      <!-- Navigation Section HTML End -->
+
+      <!-- Mobile Navigation Section HTML Start -->
+
+      <section id="Mobile-menu">
+        <div
+          class="mobile-menu-wrapper d-flex d-xl-none justify-content-between align-items-center"
+        >
+          <div id="bars" class="bars d-flex align-items-center">
+            <div class="bar-icon">
+              <i class="fa-solid fa-bars"></i>
+            </div>
+            <span>Menu</span>
+          </div>
+          <div class="mobile-logo">
+            <li>
+              <a href="https://www.debtcollectionexperts.com.au"
+                ><img src="assets/images/logo.svg" alt="logo"
+              /></a>
+            </li>
+          </div>
+          <div class="mobile-call">
+            <li>
+              <a href="tel:0488160069"
+                ><span class="material-symbols-outlined"> call </span></a
+              >
+            </li>
+          </div>
+          <div id="mobile-nav" class="mobile-nav">
+            <div class="mobile-main-menu">
+              <div id="cross-icon">
+                <i class="fa-solid fa-xmark"></i>
+              </div>
+              <ul>
+                <li>
+                  <a
+                    class="m-active"
+                    href="https://www.debtcollectionexperts.com.au"
+                    >Home
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.debtcollectionexperts.com.au/about-us"
+                    >About Us</a
+                  >
+                </li>
+                <li>
+                  <a class="sub-btn" href="#"
+                    >Debt Collection Services
+                    <span>
+                      <i class="fa-solid fa-plus"></i>
+                      <i class="fa-solid fa-minus"></i> </span
+                  ></a>
+                  <div class="sub-menu">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                      >Commercial Debt Collection</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                      >Debt Collection</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-collector.html"
+                      >Debt Collector</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                      >Debt Recovery</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                      >Personal Debt Collection</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                      >Small Busniess Debt Collection</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
+                      >Debt Collection Agency</a
+                    >
+                  </div>
+                </li>
+                <li>
+                  <a class="sub-btn" href="#"
+                    >Locations<span>
+                      <i class="fa-solid fa-plus"></i>
+                      <i class="fa-solid fa-minus"></i> </span
+                  ></a>
+                  <div class="sub-menu">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/hobart.html"
+                      >Hobart</a
+                    >
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/launceston.html"
+                      >Launceston</a
+                    >
+                  </div>
+                </li>
+                <li>
+                  <a href="https://www.debtcollectionexperts.com.au/contact-us"
+                    >Contact Us</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="mobile-menu-bottom">
+              <ul>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.instagram.com/elitesouthernconstruction"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/elitesouthernconstruction"
+                    ><i class="fa-brands fa-facebook-f"></i
+                  ></a>
+                </li>
+              </ul>
+              <p>
+                © 2024
+                <a href="https://www.debtcollectionexperts.com.au"
+                  >Debt Collection Experts</a
+                >, All rights reserved.
+              </p>
+              <div class="mobile-privacy-menu pt-4">
+                <ul>
+                  <li>
+                    <a target="_blank" href="assets/pdf/sitemap.xml">Sitemap</a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/privacy-policy"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/terms-of-use"
+                      >Terms of Use</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Mobile Navigation Section HTML End -->
+    </header>
+
+    <!-- Header Part HTML End -->
+
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
@@ -29,5 +310,16 @@
 
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
+
+    <script>
+      // JQuery for Mobile Navigation
+
+      $(document).ready(function () {
+        $(".sub-btn").click(function () {
+          $(this).next(".sub-menu").slideToggle();
+          $(this).toggleClass("active");
+        });
+      });
+    </script>
   </body>
 </html>
