Hero Section Done

--- a/index.html
+++ b/index.html
@@ -298,6 +298,37 @@
       </section>
 
       <!-- Mobile Navigation Section HTML End -->
+
+      <!-- Hero Section HTML Start -->
+
+      <section id="Hero">
+        <div class="hero-wrapper">
+          <div class="container">
+            <div class="hero-container position-relative">
+              <div class="hero-content">
+                <h6>DEBT COLLECTION EXPERTS IN TASMANIA</h6>
+                <h1>
+                  No Collection, <br />
+                  No Fee Guarantee!*
+                </h1>
+                <div class="hero-buttons d-flex justify-content-center">
+                  <div class="primary-btn pe-3">
+                    <a href="#">CALL US</a>
+                  </div>
+                  <div class="primary-btn ps-3">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/contact-us.html#Contact"
+                      >EMAIL US</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Hero Section HTML End -->
     </header>
 
     <!-- Header Part HTML End -->
