--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
 
+    <!-- AOS Animation CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -302,10 +305,10 @@
       <!-- Hero Section HTML Start -->
 
       <section id="Hero">
-        <div class="hero-wrapper">
+        <div class="hero-wrapper overflow-hidden">
           <div class="container">
             <div class="hero-container position-relative">
-              <div class="hero-content">
+              <div class="hero-content" data-aos="fade-up">
                 <h6>DEBT COLLECTION EXPERTS IN TASMANIA</h6>
                 <h1>
                   No Collection, <br />
@@ -336,6 +339,9 @@
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
+    <!-- AOS Animation JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-- Bootstrap JavaScript -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 
@@ -343,6 +349,10 @@
     <script src="assets/js/script.js"></script>
 
     <script>
+      // Initialize AOS
+
+      AOS.init();
+
       // JQuery for Mobile Navigation
 
       $(document).ready(function () {
