Experts & Preferred Sections are done

--- a/index.html
+++ b/index.html
@@ -332,6 +332,179 @@
 
     <!-- Header Part HTML End -->
 
+    <!-- Main Part HTML Start -->
+
+    <main>
+      <!-- Experts Section HTML Start -->
+
+      <section id="Experts">
+        <div class="experts-wrapper section-spacing">
+          <div class="container">
+            <div class="section-title experts-title">
+              <h2>
+                Debt Collection and recovery experts trusted by local Tasmanians
+              </h2>
+            </div>
+            <div class="experts-container">
+              <div class="row">
+                <div class="col-lg-5">
+                  <div class="experts-img">
+                    <img
+                      loading="lazy"
+                      src="assets/images/home-experts-img.png"
+                      alt="home-experts-img"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                  <div class="experts-content">
+                    <p>
+                      With over 20 years of experience and endorsed by 2,000+
+                      businesses, we specialise in
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                        >Debt Collection</a
+                      >,
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                        >Debt Recovery</a
+                      >, and related services including
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        >Small Business Debt Collection</a
+                      >
+                      and
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                        >Commercial Debt Collection</a
+                      >.
+                    </p>
+                    <p class="pt-3">
+                      We're pivotal in helping individuals, small businesses,
+                      large companies, and government entities recover bad debts
+                      efficiently. With high success rates, we're Tasmania's top
+                      choice for
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                        >Debt Recovery</a
+                      >
+                      and
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                        >Debt Collection</a
+                      >
+                      solutions.
+                    </p>
+                    <div class="experts-btn primary-btn pt-4">
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/about-us.html"
+                      >
+                        ABOUT US</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Experts Section HTML End -->
+
+      <!-- Preferred Section HTML Start -->
+
+      <section id="Preferred">
+        <div class="preferred-wrapper section-spacing">
+          <div class="container">
+            <div class="preferred-top section-title">
+              <h2>
+                Preferred by local Tasmanian businesses and local government
+              </h2>
+              <p>
+                Our track record speaks volumes. Trusted by locals, small
+                businesses, and government entities alike, we are the go-to
+                solution for debt collection and recovery in Tasmania.
+              </p>
+            </div>
+            <div class="preferred-brands">
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/spectran-logo.svg"
+                  alt="spectran-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/tassal-logo.svg"
+                  alt="tassal-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/cat-logo.svg"
+                  alt="cat-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/huon-logo.svg"
+                  alt="huon-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/tcs-logo.svg"
+                  alt="tcs-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/duggans-logo.svg"
+                  alt="duggans-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/hazellbros-logo.svg"
+                  alt="hazellbros-logo"
+                />
+              </div>
+              <div class="brand-logo">
+                <img
+                  loading="lazy"
+                  src="assets/images/doj-logo.svg"
+                  alt="doj-logo"
+                />
+              </div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <div class="primary-btn pe-3">
+                <a href="#">CALL US</a>
+              </div>
+              <div class="primary-btn ps-3">
+                <a
+                  href="https://www.debtcollectionexperts.com.au/contact-us.html#Contact"
+                  >EMAIL US</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Preferred Section HTML End -->
+    </main>
+
+    <!-- Main Part HTML End -->
+
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
