3 more sections are done

--- a/index.html
+++ b/index.html
@@ -501,6 +501,400 @@
       </section>
 
       <!-- Preferred Section HTML End -->
+
+      <!-- Services Section HTML Start -->
+
+      <section id="Services">
+        <div class="services-wrapper section-spacing">
+          <div class="container">
+            <div class="services-top section-title">
+              <h2>What Debt Collection and recovery services do we offer?</h2>
+              <p>
+                Are financial challenges impacting you or your business or
+                across Tasmania? Look no further! Our dedicated debt collection
+                agency is here to provide specialised and local Debt Collection
+                solutions to your Debt Recovery needs. We pride ourselves on
+                offering efficient and reliable debt recovery services tailored
+                specifically to the unique demands of the Tasmanian market.
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-lg-4">
+                <article class="service-card">
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                  >
+                    <div class="services-card-img">
+                      <img
+                        loading="lazy"
+                        src="assets/images/commercial-debt-collection-img.png"
+                        alt="commercial-debt-collection-img"
+                      />
+                    </div>
+                    <div class="service-card-content">
+                      <h5>Commercial Debt Collection</h5>
+                      <p>
+                        Commercial debt collection is the organised process of
+                        collecting overdue payments that businesses owe to each
+                        other.
+                      </p>
+                      <div class="learn-more-btn">
+                        <a
+                          href="https://www.debtcollectionexperts.com.au/commercial-debt-collection.html"
+                          >Learn more <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <article class="service-card">
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                  >
+                    <div class="services-card-img">
+                      <img
+                        loading="lazy"
+                        src="assets/images/consumer-debt-collection-img.png"
+                        alt="consumer-debt-collection-img"
+                      />
+                    </div>
+                    <div class="service-card-content">
+                      <h5>Consumer Debt Collection</h5>
+                      <p>
+                        Commercial debt collection is the organised process of
+                        collecting overdue payments that businesses owe to each
+                        other.
+                      </p>
+                      <div class="learn-more-btn">
+                        <a
+                          href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                          >Learn more <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <article class="service-card">
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/debt-collector.html"
+                  >
+                    <div class="services-card-img">
+                      <img
+                        loading="lazy"
+                        src="assets/images/debt-collector-and-tracking-img.png"
+                        alt="debt-collector-and-tracking-img"
+                      />
+                    </div>
+                    <div class="service-card-content">
+                      <h5>Debt Collector and Tracking</h5>
+                      <p>
+                        Commercial debt collection is the organised process of
+                        collecting overdue payments that businesses owe to each
+                        other.
+                      </p>
+                      <div class="learn-more-btn">
+                        <a
+                          href="https://www.debtcollectionexperts.com.au/debt-collector.html"
+                          >Learn more <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <article class="service-card">
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                  >
+                    <div class="services-card-img">
+                      <img
+                        loading="lazy"
+                        src="assets/images/debt-recovery-img.png"
+                        alt="debt-recovery-img"
+                      />
+                    </div>
+                    <div class="service-card-content">
+                      <h5>Debt Recovery</h5>
+                      <p>
+                        Commercial debt collection is the organised process of
+                        collecting overdue payments that businesses owe to each
+                        other.
+                      </p>
+                      <div class="learn-more-btn">
+                        <a
+                          href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                          >Learn more <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <article class="service-card">
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                  >
+                    <div class="services-card-img">
+                      <img
+                        loading="lazy"
+                        src="assets/images/personal-debt-collection-img.png"
+                        alt="personal-debt-collection"
+                      />
+                    </div>
+                    <div class="service-card-content">
+                      <h5>Personal Debt Collection</h5>
+                      <p>
+                        Commercial debt collection is the organised process of
+                        collecting overdue payments that businesses owe to each
+                        other.
+                      </p>
+                      <div class="learn-more-btn">
+                        <a
+                          href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                          >Learn more <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <article class="service-card">
+                  <a
+                    href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                  >
+                    <div class="services-card-img">
+                      <img
+                        loading="lazy"
+                        src="assets/images/small-business-debt-collection-img.png"
+                        alt="small-business-debt-collection-img"
+                      />
+                    </div>
+                    <div class="service-card-content">
+                      <h5>Small Business Debt Collection</h5>
+                      <p>
+                        Commercial debt collection is the organised process of
+                        collecting overdue payments that businesses owe to each
+                        other.
+                      </p>
+                      <div class="learn-more-btn">
+                        <a
+                          href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                          >Learn more <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Services Section HTML End -->
+
+      <!-- Guarantee Section HTML Start -->
+
+      <section id="Guarantee">
+        <div class="guarantee-wrapper section-spacing">
+          <div class="container">
+            <div class="row px-lg-5">
+              <div class="col-lg-6 col-xl-5">
+                <div class="guarantee-content">
+                  <h2>
+                    No Collection, <br />
+                    No Fee Guarantee*!
+                  </h2>
+                  <p>
+                    We operate on a No Collection, No Fee Guarantee*, meaning
+                    you won't be charged if we don't recover the owed funds.
+                    This reflects our confidence in achieving results and
+                    ensures our interests align with yours. We prioritise
+                    transparency and fairness in all our services, offering
+                    reassurance as we work together to enhance your small
+                    business's financial wellbeing.
+                  </p>
+                  <div class="guarantee-buttons d-flex pt-4">
+                    <div class="primary-btn pe-3">
+                      <a href="#">CALL US</a>
+                    </div>
+                    <div class="primary-btn ps-3">
+                      <a
+                        href="https://www.debtcollectionexperts.com.au/contact-us.html#Contact"
+                        >EMAIL US</a
+                      >
+                    </div>
+                  </div>
+                  <span
+                    >*"No Collection, No Fee Guarantee" is subject to specific
+                    terms and conditions. Certain exceptions and limitations may
+                    apply, and the guarantee may not cover all scenarios</span
+                  >
+                </div>
+              </div>
+              <div class="col-lg-6 col-xl-5">
+                <div class="guarantee-img">
+                  <img
+                    loading="lazy"
+                    src="assets/images/no-collection-no-fee-guarantee.png"
+                    alt="no-collection-no-fee-guarantee-img"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Guarantee Section HTML End -->
+
+      <!-- Review Section HTML Start -->
+
+      <section id="Review">
+        <div class="review-wrapper section-spacing">
+          <div class="container">
+            <div class="review-top section-title">
+              <h2>
+                Customer reviews: <br />
+                What people are saying about us
+              </h2>
+              <p>
+                Our track record speaks volumes from outstanding customer
+                support to high quality offerings, find out why people trust and
+                recommend us.
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-lg-4">
+                <div class="review-card">
+                  <div
+                    class="review-card-top d-flex justify-content-between align-items-center pb-3"
+                  >
+                    <div class="client-avatar">
+                      <img
+                        loading="lazy"
+                        src="assets/images/sarah-avatar.svg"
+                        alt="sarah-avatar"
+                      />
+                    </div>
+                    <div class="client-brand-logo">
+                      <img
+                        loading="lazy"
+                        src="assets/images/spectran-logo.svg"
+                        alt="spectran-avatar"
+                      />
+                    </div>
+                  </div>
+                  <div class="review-content">
+                    <h5>
+                      "Efficient, professional, and understanding. Recovered my
+                      debts hassle-free. Highly recommended!"
+                    </h5>
+                    <div class="star py-3">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="client-name">
+                      <h6>Sarah Thompson</h6>
+                      <span>Spectran Group</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <div class="review-card">
+                  <div
+                    class="review-card-top d-flex justify-content-between align-items-center pb-3"
+                  >
+                    <div class="client-avatar">
+                      <img
+                        loading="lazy"
+                        src="assets/images/bobby-avatar.svg"
+                        alt="bobby-avatar"
+                      />
+                    </div>
+                    <div class="client-brand-logo">
+                      <img
+                        loading="lazy"
+                        src="assets/images/tassal-logo.svg"
+                        alt="tassal-avatar"
+                      />
+                    </div>
+                  </div>
+                  <div class="review-content">
+                    <h5>
+                      "Prompt and effective debt collection for my small
+                      business. Kept my cash flow stable. Thank you!"
+                    </h5>
+                    <div class="star py-3">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="client-name">
+                      <h6>Bobby Morrilo</h6>
+                      <span>Tassal</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <div class="review-card">
+                  <div
+                    class="review-card-top d-flex justify-content-between align-items-center pb-3"
+                  >
+                    <div class="client-avatar">
+                      <img
+                        loading="lazy"
+                        src="assets/images/emma-avatar.svg"
+                        alt="emma-avatar"
+                      />
+                    </div>
+                    <div class="client-brand-logo">
+                      <img
+                        loading="lazy"
+                        src="assets/images/doj-logo.svg"
+                        alt="doj-avatar"
+                      />
+                    </div>
+                  </div>
+                  <div class="review-content">
+                    <h5>
+                      "Reliable partner for government debt collection.
+                      Professional, discreet, and compliant. Trusted."
+                    </h5>
+                    <div class="star py-3">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="client-name">
+                      <h6>Emma Johnson</h6>
+                      <span>Department of Justice</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Review Section HTML End -->
     </main>
 
     <!-- Main Part HTML End -->
