Specialise & Work Sections are done

--- a/index.html
+++ b/index.html
@@ -895,6 +895,203 @@
       </section>
 
       <!-- Review Section HTML End -->
+
+      <!-- Specialise Section HTML Start -->
+
+      <section id="Specialise">
+        <div class="specialise-wrapper section-spacing">
+          <div class="container">
+            <div class="specialise-top section-title">
+              <h2>
+                We specialise in Debt Collection and recovery services for local
+                Tasmanians
+              </h2>
+              <p>
+                With offices in
+                <a
+                  href="https://www.debtcollectionexperts.com.au/launceston.html"
+                  >Launceston</a
+                >
+                and
+                <a href="https://www.debtcollectionexperts.com.au/hobart.html"
+                  >Hobart</a
+                >, we can deliver comprehensive
+                <a
+                  href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                  >Debt Collection</a
+                >
+                and
+                <a
+                  href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                  >Debt Recovery</a
+                >
+                services throughout Tasmania. Our team of seasoned Debt
+                Collection Specialists bring local insights into your customers
+                and their debt challenges. Our local expertise is crucial for
+                achieving quick and satisfactory resolutions in
+                <a
+                  href="https://www.debtcollectionexperts.com.au/debt-collection.html"
+                  >Debt Collection</a
+                >
+                or
+                <a
+                  href="https://www.debtcollectionexperts.com.au/debt-recovery.html"
+                  >Debt Recovery</a
+                >
+                within Tasmania.
+              </p>
+            </div>
+            <div class="row specialise-cards">
+              <div class="col-lg-6">
+                <div class="specialise-card">
+                  <img
+                    loading="lazy"
+                    src="assets/images/hobart-thumb.png"
+                    alt="hobart-thumb"
+                  />
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/hobart.html"
+                      >Hobart <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="specialise-card">
+                  <img
+                    loading="lazy"
+                    src="assets/images/launceston-thumb.png"
+                    alt="launceston-thumb"
+                  />
+                  <div class="learn-more-btn">
+                    <a
+                      href="https://www.debtcollectionexperts.com.au/launceston.html"
+                      >Launceston <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Specialise Section HTML End -->
+
+      <!-- Work Section HTML Start -->
+
+      <section id="Work">
+        <div class="work-wrapper section-spacing">
+          <div class="container">
+            <div class="work-top section-title">
+              <h2>How does Debt Collection recovery services work?</h2>
+              <p>
+                Our four-step approach begins with a thorough assessment of the
+                debt, followed by clear communication with the debtor to
+                negotiate repayment terms.
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-lg-3">
+                <div class="work-card">
+                  <div class="work-card-img position-relative">
+                    <img
+                      loading="lazy"
+                      src="assets/images/assesment-img.png"
+                      alt="assesment-img"
+                    />
+                    <div class="step-tag">
+                      <span>Step 1</span>
+                    </div>
+                  </div>
+                  <div class="work-card-content">
+                    <h5>Step 1: Assessment</h5>
+                    <p>
+                      Once you contact us to assess your debt, we will gather
+                      information about the debtor, including their contact
+                      details, financial situation, and payment history, to
+                      determine the appropriate course of action.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="work-card">
+                  <div class="work-card-img position-relative">
+                    <img
+                      loading="lazy"
+                      src="assets/images/communication-img.png"
+                      alt="communication-img"
+                    />
+                    <div class="step-tag">
+                      <span>Step 2</span>
+                    </div>
+                  </div>
+                  <div class="work-card-content">
+                    <h5>Step 2: Communication</h5>
+                    <p>
+                      After our assessment is complete, our next step is to
+                      communicate directly with the debtor. This may involve
+                      sending letters, making phone calls, or meeting in person
+                      to discuss the debt and potential repayment options.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="work-card">
+                  <div class="work-card-img position-relative">
+                    <img
+                      loading="lazy"
+                      src="assets/images/negotiation-img.png"
+                      alt="negotiation-img"
+                    />
+                    <div class="step-tag">
+                      <span>Step 3</span>
+                    </div>
+                  </div>
+                  <div class="work-card-content">
+                    <h5>Step 3: Negotiation</h5>
+                    <p>
+                      During this stage, we work with both parties to reach a
+                      mutually acceptable agreement for repayment. This could
+                      include setting up a payment plan, negotiating a reduced
+                      settlement amount, or exploring alternative options based
+                      on the debtor's circumstances.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="work-card">
+                  <div class="work-card-img position-relative">
+                    <img
+                      loading="lazy"
+                      src="assets/images/enforcement-img.png"
+                      alt="enforcement-img"
+                    />
+                    <div class="step-tag">
+                      <span>Step 4</span>
+                    </div>
+                  </div>
+                  <div class="work-card-content">
+                    <h5>Step 4: Enforcement</h5>
+                    <p>
+                      If the debtor fails to comply with the agreed-upon terms,
+                      we're prepared to take enforcement actions. This could
+                      involve legal measures to compel the debtor to repay the
+                      debt.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Work Section HTML End -->
     </main>
 
     <!-- Main Part HTML End -->
